# fleet-mcp

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: architect.md  coder.md  emergency.md  engineer.md  qa.md  security.md  sre.md
.harness/: config.json
docs/: knowledge-graph.yaml
docs/harness/: QUICKSTART.md
docs/harness/agents/: architect.md  coder.md  emergency.md  engineer.md  inspector.md  qa.md  reviewer.md  security.md  sre.md
docs/harness/hooks/: run.py
docs/harness/hooks/post_tool_use/: audit_logger.py
docs/harness/hooks/pre_compact/: mandate_snapshot.py  transcript_archive.py
docs/harness/hooks/pre_tool_use/: bouncer.py  communication_guard.py  database_guard.py  git_guard.py  secrets_guard.py
docs/harness/hooks/stop/: completion_gate.py
docs/harness/templates/: dip.md
docs/harness/tools/: migrate_audit_log.py  web_verify.py
docs/mandates/fleet-context/: fleet_mcp_server_implementation_plan.md  fleet_mcp_validate_command_implementation_plan.md
docs/mandates/harness/: harness_quickstart_implementation_plan.md
docs/mandates/oss-prep/: remove_adswire_examples_from_history_plan.md
src/: cli.py  config.py  server.py  validator.py
src/models/: contract.py  data_model.py  deployment.py  landmine.py  service.py
src/store/: loader.py
src/tools/: contracts.py  data_model.py  deployment.py  impact.py  topology.py
tests/: conftest.py  test_cli.py  test_store.py  test_tools.py  test_validator.py
tests/fixtures/example-fleet/: contracts.yaml  data_models.yaml  deployment.yaml  landmines.yaml
tests/fixtures/invalid-fleet/: contracts.yaml  data_models.yaml  deployment.yaml  landmines.yaml  services.yaml
